--- a/haunted_house/package.json
+++ b/haunted_house/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "devDependencies": {
     "vite": "^6.3.5"
   },
   "dependencies": {
     "lil-gui": "^0.20.0",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "vercel": "^43.1.0"
   }
 }
